# DRF

./: Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
event_manager/: settings.py  urls.py
quickstart/: admin.py  models.py  serializers.py  views.py
quickstart/migrations/: 0001_initial.py  0002_eventregistration.py
